--- a/style.css
+++ b/style.css
@@ -91,5 +91,10 @@ body {
 }
 
 @media (max-width: 343px) {
-
+    .container {
+        flex-direction: column-reverse;
+        height: 350px;
+        align-items: center;
+        justify-content: space-around;
+    }
 }
